identifying ok/ko mails (test with pdfs)